--- a/tugas_web/checkout.html
+++ b/tugas_web/checkout.html
@@ -5,190 +5,176 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table Shop</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/checkout.css">
 </head>
 
 <body>
-    <table border="1" align="center" style="border-collapse: collapse; width: 80%; padding: 10px;">
-        <thead>
-            <th bgcolor="#ECECEC" colspan="2">
-                <table border="0" style="width: auto; margin: 20px;">
+    <header>
+        <div id="header">
+            <div id="sitename">
+                <div id="bbox"></div>
+                <h3>Site Name</h3>
+            </div>
+            <div id="category">
+                <ol>
+                    <li><a href=""><u>Category 1</u></a> |</li>
+                    <li><a href=""><u>Category 2</u></a> |</li>
+                    <li><a href=""><u>Category 3</u></a></li>
+                </ol>
+            </div>
+            <div id="feature">
+                <img src="foto/search.png" style="width: 20px;">
+                <img src="foto/cart.png" style="width: 26px;">
+                Cart (1)
+            </div>
+        </div>
+    </header>
+    <section>
+        <div id="section">
+            <div id="table">
+                <table>
                     <tr>
-                        <td style="background-color: black; width: 25px; border-radius: 20%;"></td>
-                        <td style="width: 15%; text-align: left; padding-right: 40px; font-size: 25px;">Site Name</td>
                         <td>
-                            <table border="0">
-                                <tr>
-                                    <td style="border-right: 1px solid;"><a href=""> Categoty 1</a></td>
-                                    <td style="border-right: 1px solid;"><a href=""> Categoty 2</a></td>
-                                    <td style=><a href=""> Categoty 3</a></td>
-                                </tr>
-                            </table>
+                            <img src="foto/ceklis.jpg" alt="" id="checklist">
+                            <h4 id="order">Order 131217312</h4>
+                            <h3 id="thank">Thank you, Kenny!</h3>
                         </td>
-                        <td style="width: 25%; text-align: right;">
-                            <img src="foto/search.png" style="width: 20px;">
-                            <img src="foto/cart.png" style="width: 26px;">
-                            Cart(1)
-                        </td>
-                    </tr>
-                </table>
-            </th>
-        </thead>
-        <tbody>
-            <td style="width: 60%; padding-top: 40px; padding-left: 20px; padding-right: 20px; border-right: none;">
-                <table border="0" style="width: 100%;">
-                    <tr>
-                        <td style="width: 5%;">
-                            <img src="foto/ceklis.jpg" width="50px">
-                        </td>
-                        <td colspan="0" style="width:30%;">
-                            Order 131217312<br />
-                            Thankyou, Kenny!
-                        </td>
-                        <td style="width:30%;"></td>
-                        <td style="width: 30%; margin-top: 0%; border-left: 0px; padding-bottom: 200px; padding-left: 40px;"
-                            rowspan="9">
-                            <table
-                                style="width: 90%; background-color: grey; padding-right: 10px; padding-left: 10px; padding-top: 5px;"
-                                border="0">
-                                <thead>
-                                    <th colspan="2" style="text-align: left; font-size: 18px;">Summary (1 Item)</th>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            Subtotal
-                                        </td>
-                                        <td style="text-align: right;">$20.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Shipping</td>
-                                        <td style="text-align: right;">$2.20</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Est. Taxes</td>
-                                        <td style="text-align: right;">$1.40</td>
-                                    </tr>
-                                    <tr>
-                                        <td colspan="2">
-                                            <hr />
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td colspan="2">
-                                            Gift card or discount code<br />
-                                            <input type="text" style="width: 160px;"><button
-                                                style="color: grey; border: 2px grey solid;">Apply</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td colspan="2">
-                                            <hr />
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align: left;">Total</td>
-                                        <td style="text-align: right;"><b>$20.00</b></td>
-                                    </tr>
-                                    <tr>
-                                        <td colspan="2" style=" padding-bottom: 10px;">
-                                            <button
-                                                style="width: 100%; background-color: blue; color: white; padding-top: 5px; padding-bottom: 5px; border: 3px solid black;">Checkout</button>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="3">
-                            <hr />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="3" style="padding-bottom: 20px;">
-                            Your order is confirmed.<br /><br />
-                            We've accepted your order dan we're getting it ready.
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="3">
-                            <hr />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="3" style="font-size: 20px; padding-bottom: 10px;"><b>Costumer Information</b>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">Shipping Address<br />
-                            Kenny Bostick<br />
-                            <a href="">12 Waldo Point Road</a><br />
-                            <a href="">Mishauken, NY 11200</a><br />
-                            <a href="">United States</a><br /><br />
-                        </td>
-                        <td style="padding-bottom: 15px;">Billing Address<br />
-                            Kenny Bostick<br />
-                            <a href="">12 Waldo Point Road</a><br />
-                            <a href="">Mishauken, NY 11200</a><br />
-                            <a href="">United States</a><br />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"></td>
-                        <td>
-                            Payment Method<br /></td>
                     </tr>
                     <tr>
                         <td colspan="2">
-                            Shipping Method<br />
-                            UPS Ground(Estimated ship<br />
+                            <hr>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Your order is confirmed.<br><br>
+                            We've accepted your order and we're getting it ready.<br><br>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <hr>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h3 id="info">Customer Information</h3>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <b>Shipping Address</b><br>
+                            Kenny Bostick<br>
+                            <u>12 Waldo Point Road</u><br>
+                            <u>Mishauken, NY 11200</u><br>
+                            <u>United States</u>
+                        </td>
+                        <td>
+                            <b>Billing Address</b><br>
+                            Kenny Bostick<br>
+                            <u>12 Waldo Point Road</u><br>
+                            <u>Mishauken, NY 11200</u><br>
+                            <u>United States</u>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="method">
+                            <b>Shipping Method</b><br>
+                            UPS Ground (Estimated ship<br>
                             time of 3-6 days)
                         </td>
-                        <td style="padding-bottom: 40px;">
-                            Ending in 3217 - $23.60
+                        <td id="payment">
+                            <b>Payment Method</b><br>
+                            <img src="foto/visa.png">
+                            Ending in 3217 -- $23.60<br>
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="3" style="padding-bottom: 5px;">
-                            <hr />
+                        <td colspan="2">
+                            <hr>
                         </td>
                     </tr>
                 </table>
-            </td>
-        </tbody>
-        <tfoot>
-            <td colspan="2">
-                <table border="0" style="width: 100%; padding-top: 10px; padding-bottom: 10px; padding-left: 20px;">
+            </div>
+            <div id="summary">
+                <table>
                     <tr>
-                        <td style="width: 10%;">Site Name</td>
-                        <td colspan="3" style="width: 50%;">
-                            <table border="0">
-                                <tr>
-                                    <td style="border-right: 1px solid;"><a href=""> Categoty X</a>
-                                    </td>
-                                    <td style="border-right: 1px solid;"><a href=""> Categoty Y</a>
-                                    </td>
-                                    <td style=><a href=""> Categoty Z</a></td>
-                                </tr>
-                            </table>
+                        <td colspan="2">
+                            <h4>Summary (1 item)</h4>
                         </td>
-                        <td style="width: 23%;">Stay In Touch! Join our Newsletter.</td>
                     </tr>
                     <tr>
-                        <td colspan="4">
-                            <img src="foto/visa.png" width="20px">
-                            <img src="foto/mcard.png" width="20px">
-                            <img src="foto/aexpress.png" width="25px">
+                        <td>Subtotal</td>
+                        <td>$20.00</td>
+                    </tr>
+                    <tr>
+                        <td>Shipping</td>
+                        <td>$2.20</td>
+                    </tr>
+                    <tr>
+                        <td>Est. Taxes</td>
+                        <td>$1.40</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <hr>
                         </td>
-                        <td><input type="email" placeholder="Enter Email"><button
-                                style="background-color: grey; color: white;">Subscribe</button>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            Gift card or discount code
                         </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text">
+                        </td>
+                        <td>
+                            <button type="submit" id="apply">Apply</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <hr>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><b>Total</b></td>
+                        <td><b>$23.60</b></td>
                     </tr>
                 </table>
-            </td>
-        </tfoot>
-    </table>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div id="footer">
+            <div id="footerl">
+                <div id="footer1">
+                    Site Name
+                    <ol>
+                        <li><a href=""><u>Category X</u><b> |</b></a></li>
+                        <li><a href=""><u>Category Y</u><b> |</b></a></li>
+                        <li><a href=""><u>Category Z</u></a></li>
+                    </ol>
+                </div>
+                <div id="bank">
+                    <img src="foto/visa.png">
+                    <img src="foto/mcard.png">
+                    <img src="foto/aexpress.png">
+                </div>
+            </div>
+            <div id="footerr">
+                <div>
+                    Stay In Touch! Join our Newsletter.
+                </div>
+                <div id="footer2">
+                    <input type="email" name="" id="" placeholder="Enter Email">
+                    <button type="submit" id="subscribe">Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
